<resources>
    <string name="app_name">Семейный бюджет</string>

    <string name="tv_addNewBudget">Создание нового кошелька...</string>
    <string name="inputNamePurse">Введите название кошелька</string>
    <string name="btnCreate">Создать</string>

    <string name="action_add_purse">Добавить кошелек</string>
    <string name="action_about">О программе</string>
    <string name="action_add_operations">Добавить операцию</string>
    <string name="action_del_purse">Удалить кошелек</string>
    <string name="action_edit_purse">Редактировать кошелек</string>
    <string name="etNamePurse">Название кошелька</string>
    <string name="btnSave">Сохранить</string>
    <string name="tvNamePurse">Название кошелька</string>
    <string name="radioBattonInInner">Перевести в резерв</string>
    <string name="radioBattonExternal">Внешняя</string>
    <string name="radioBattonTranslation">Перевод в другой кошелек</string>
    <string name="tvDate">Дата операции</string>
    <string name="addOperation">Добавление операции</string>
    <string name="nameOperation">Название операции</string>
    <string name="summOperation">Сумма</string>
    <string name="typeOperation">Тип оперции</string>
    <string name="inputDateOperation">выберите дату операции</string>
    <string name="inputNameOperation">введите название операции</string>
    <string name="inputSummOperation">введите сумму операции</string>
    <string name="btnOk">ок</string>
    <string name="putInReserve">Отложить % в резер</string>
    <string name="income">Доход (+)</string>
    <string name="expenses">Расход (-)</string>

    <string-array name="procent">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="choose_date">Выберите дату</string>
    <string name="ready">Готово</string>
    <string name="radioBattonOutInner">Перевести из резерва</string>
</resources>
