<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_operation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.shlomeno4ek.familybudget.OperationActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:weightSum="1">

        <TextView
            android:text="@string/addOperation"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="0.00" />

        <TextView
            android:text="@string/tvNamePurse"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNamePurse"
            android:layout_alignParentTop="true"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:text="@string/summOperation"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSumm" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etSumm"
            android:hint="@string/inputSummOperation" />

        <TextView
            android:text="@string/tvDate"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:text="@string/inputDateOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvInputDate"
            android:layout_weight="0.33"
            android:paddingTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/nameOperation"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNameOperation"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName"
            android:hint="@string/inputNameOperation" />

        <TextView
            android:text="@string/typeOperation"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTypeOperation"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="0.45">

            <RadioGroup
                android:layout_width="181dp"
                android:layout_height="113dp"
                android:id="@+id/radio_group">

                <RadioButton
                android:id="@+id/radio_external"
                android:text="@string/radioBattonExternal"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                    tools:ignore="RtlHardcoded" />

                <RadioButton
                    android:id="@+id/radio_inner"
                    android:text="@string/radioBattonInner"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    tools:ignore="RtlHardcoded" />

                <RadioButton
                android:id="@+id/radio_translation"
                android:text="@string/radioBattonTranslation"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                    tools:ignore="RtlHardcoded" />

            </RadioGroup>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:text="@string/putInReserve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxPutInReserve"
                    android:layout_weight="0.35" />

                <Spinner
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerProcentReserve"
                    android:entries="@array/procent"
                    android:layout_weight="0.10" />
            </LinearLayout>

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerNamePurse"
            android:layout_weight="0.31" />

        <Button
            android:text="@string/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAccept" />

    </LinearLayout>

</LinearLayout>
